--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+http-body-util = "0.1.1"
+hyper = { version = "1.3.1", features = ["full"] }
+hyper-reverse-proxy = { git = "https://github.com/stefansundin/hyper-reverse-proxy.git", branch = "igloo", version = "0.5.2-dev" }
+hyper-rustls = "0.27.1"
+hyper-util = "0.1.3"
+rustls = "0.23.7"
+tokio = { version = "1.37.0", features = ["macros", "signal", "rt-multi-thread"] }
