--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ http-body-util = "0.1.1"
 hyper = { version = "1.3.1", features = ["full"] }
 hyper-reverse-proxy = { git = "https://github.com/stefansundin/hyper-reverse-proxy.git", branch = "igloo", version = "0.5.2-dev" }
 hyper-rustls = "0.27.1"
-hyper-util = "0.1.3"
+hyper-util = { version = "0.1.3", features = ["server"] }
 rustls = "0.23.7"
+rustls-pemfile = "2.1.2"
 tokio = { version = "1.37.0", features = ["macros", "signal", "rt-multi-thread"] }
+tokio-rustls = "0.26.0"
