--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ hyper = { version = "1.3.1", features = ["full"] }
 hyper-reverse-proxy = { git = "https://github.com/stefansundin/hyper-reverse-proxy.git", branch = "igloo", version = "0.5.2-dev" }
 hyper-rustls = "0.27.1"
 hyper-util = { version = "0.1.3", features = ["server"] }
+reqwest = { version = "0.12.4", features = ["rustls-tls"] }
 rustls = "0.23.7"
 rustls-pemfile = "2.1.2"
 tokio = { version = "1.37.0", features = ["macros", "signal", "rt-multi-thread"] }
 tokio-rustls = "0.26.0"
+zip = { version = "1.3.0", default-features = false, features = ["deflate"] }
