--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ rustls = "0.23.7"
 rustls-pemfile = "2.1.2"
 tokio = { version = "1.37.0", features = ["macros", "signal", "rt-multi-thread"] }
 tokio-rustls = "0.26.0"
-zip = { version = "1.3.0", default-features = false, features = ["deflate"] }
+x509-parser = "0.16.0"
+zip = { version = "1.3.1", default-features = false, features = ["deflate"] }
