--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aws-config = "1.4.0"
+aws-sdk-s3 = "1.29.0"
+env_logger = "0.11.3"
 http-body-util = "0.1.1"
 hyper = { version = "1.3.1", features = ["full"] }
 hyper-reverse-proxy = { git = "https://github.com/stefansundin/hyper-reverse-proxy.git", branch = "igloo", version = "0.5.2-dev" }
