--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,22 @@ tokio = { version = "1.37.0", features = ["macros", "signal", "rt-multi-thread"]
 tokio-rustls = "0.26.0"
 x509-parser = "0.16.0"
 zip = { version = "1.3.1", default-features = false, features = ["deflate"] }
+
+[profile.release]
+strip = true
+
+[profile.release-build]
+inherits = "release"
+opt-level = "z"
+strip = true
+debug = false
+lto = true
+codegen-units = 1
+
+[profile.debug-build]
+inherits = "release"
+opt-level = "z"
+strip = false
+debug = true
+lto = true
+codegen-units = 1
