--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ env_logger = "0.11.3"
 http-body-util = "0.1.1"
 hyper = { version = "1.3.1", features = ["full"] }
 hyper-reverse-proxy = { git = "https://github.com/stefansundin/hyper-reverse-proxy.git", branch = "igloo", version = "0.5.2-dev" }
-hyper-rustls = "0.27.1"
+hyper-rustls = { version = "0.27.1", features = ["http2"] }
 hyper-util = { version = "0.1.3", features = ["server"] }
 reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
 rustls = "0.23.7"
