--- a/examples/download-cert/docker-compose.yml
+++ b/examples/download-cert/docker-compose.yml
@@ -6,7 +6,18 @@ services:
       - 3001:443
     environment:
       UPSTREAM_URL: http://example.com
-      # Download from an S3 bucket. Make sure your S3 bucket is private!
+      REWRITE_HOST: example.com
+      RUST_LOG: igloo=debug
+
+      # Download certificate from an S3 bucket. Make sure your S3 bucket is private!
       CERTIFICATE_URL: s3://mybucket/mycert.zip
-      # You can also download the certificate using http or https, but make sure that the URL is not reachable from the internet:
+      AWS_DEFAULT_REGION: us-west-2
+      AWS_SHARED_CREDENTIALS_FILE: /.aws/credentials
+      # To use a custom S3 endpoint:
+      # AWS_PROFILE: minio
+      # AWS_S3_ENDPOINT: http://localhost:9000
+
+      # You can also download the certificate using http:// or https://, but make sure that the URL is not reachable from the internet:
       # CERTIFICATE_URL: https://internal.example.com/mycert.zip
+    volumes:
+      - ~/.aws:/.aws:ro
