--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,15 @@ name = "igloo"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+tracing = []
+
 [dependencies]
 aws-config = "1.8.5"
 aws-sdk-s3 = "1.103.0"
 env_logger = "0.11.8"
 http-body-util = "0.1.3"
-hyper = { version = "1.6.0", features = ["full"] }
+hyper = { version = "1.7.0", features = ["full"] }
 hyper-reverse-proxy = { git = "https://github.com/stefansundin/hyper-reverse-proxy.git", branch = "igloo", version = "0.5.2-dev" }
 hyper-rustls = { version = "0.27.7", features = ["http2"] }
 hyper-util = { version = "0.1.16", features = ["server"] }
@@ -18,8 +21,10 @@ rustls = "0.23.31"
 rustls-pemfile = "2.2.0"
 tokio = { version = "1.47.1", features = ["macros", "signal", "rt-multi-thread"] }
 tokio-rustls = "0.26.2"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 x509-parser = "0.17.0"
-zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
+zip = { version = "4.5.0", default-features = false, features = ["deflate"] }
 
 [profile.release]
 strip = true
